--- a/main.css
+++ b/main.css
@@ -20,6 +20,9 @@ a:focus, a:hover {
 body {
 	font-family: 'Noto Serif', serif;
 	font-size: 18px;
+	display: grid;
+	grid-column-gap: 2px;
+	grid-row-gap: 2px;
 }
 
 h1, h2 {
@@ -39,10 +42,12 @@ h2 {
 
 header {
 	text-align: center;
+	background-color: #ddddff;
 }
 
 main {
-
+	background-color: #ddddff;
+	padding: 2px 20px;
 }
 
 p {
@@ -55,17 +60,23 @@ p {
 }
 
 #automotive, #maritime, #medical, #physics, #myths {
-
-}
-
-#footer-container {
 	
 }
 
-#header-container {
+#footer-container {
+	display: grid;
+	grid-template-rows: 100%;
+	text-align: center;
+}
 
+#header-container {
+	display: grid;
+	grid-template-rows: 100%;
+	text-align: center;
+	height: 120px;
 }
 
 #main-container {
-
+	display: grid;
+	grid-template-columns:20% 60% 20%;
 }
